// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCard.vue should render a card with custom height 1`] = `

<div class="v-card v-paper theme--light elevation-2"
     style="height: 400px;"
>
</div>

`;

exports[`VCard.vue should render a flat card 1`] = `

<div class="v-card v-paper theme--light">
</div>

`;

exports[`VCard.vue should render a raised card 1`] = `

<div class="v-card v-paper theme--light elevation-3">
</div>

`;

exports[`VCard.vue should render card with img 1`] = `

<div class="v-card v-paper theme--light elevation-2">
</div>

`;

exports[`VCard.vue should render component and match snapshot 1`] = `

<div class="v-card v-paper theme--light elevation-2">
</div>

`;
